# MiniFish

./: .gitignore  README.md
minifish/: CMakeLists.txt  JsonFileIO.cpp  JsonFileIO.h  NetWork.cpp  NetWork.h  fileio.cpp  fileio.h  loginwindiw.cpp  loginwindiw.h  loginwindiw.ui  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  minifish.cpp  minifish.h  minifish.pro  minifish.ui  network.cpp  network.h
server/: CMakeLists.txt  main.cpp  network.cpp  network.h
server/linux/: CMakeLists.txt  main.cpp
server/windows/: main.cpp
